--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 21:05:02 2018</p>
+         Last Run: Mon Nov 19 22:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -29,28 +29,16 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>10:00 PM</td>
-                        <td>Clear</td>
-                        <td>0</td>
-                        <td>-2</td>
-                        <td>0</td>
-                        <td>74</td>
-                        <td>0</td>
-                        <td>6</td>
-                        <td>W</td>
-                        <td>14</td>
-                     </tr>
-                     <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-1</td>
-                        <td>-3</td>
+                        <td>-4</td>
                         <td>0</td>
-                        <td>75</td>
+                        <td>79</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>WSW</td>
-                        <td>12</td>
+                        <td>14</td>
                      </tr>
                   </tbody>
                </table>
@@ -65,7 +53,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "10:00 PM",
              "11:00 PM"
            ],
            "datasets":[
@@ -76,8 +63,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
-                 "-3"
+                 "-4"
                ]
              },
              {
@@ -87,7 +73,6 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "0",
                  "-1"
                ]
              }
@@ -134,7 +119,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "10:00 PM",
              "11:00 PM"
            ],
            "datasets":[
@@ -144,7 +128,6 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
                  "0"
                ]
              },
@@ -154,8 +137,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "74",
-                 "75"
+                 "79"
                ]
              },
              {
@@ -164,8 +146,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "14",
-                 "12"
+                 "14"
                ]
              }
            ]
@@ -206,7 +187,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 21:05:02 2018</p>
+         Last Run: Mon Nov 19 22:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -247,14 +228,14 @@
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>72</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>2</td>
                         <td>-2</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>61</td>
                         <td>0</td>
                         <td>14</td>
@@ -359,7 +340,7 @@
                "data":[
                  "0",
                  "0",
-                 "1"
+                 "0"
                ]
              },
              {
@@ -380,7 +361,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "79",
-                 "72",
+                 "71",
                  "66"
                ]
              }
@@ -421,7 +402,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 21:05:02 2018</p>
+         Last Run: Mon Nov 19 22:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -443,26 +424,26 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-3</td>
+                        <td>-2</td>
+                        <td>-4</td>
                         <td>2</td>
                         <td>63</td>
                         <td>1</td>
                         <td>6</td>
                         <td>NW</td>
-                        <td>48</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>57</td>
                         <td>1</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>48</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -474,19 +455,19 @@
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>48</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>54</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>41</td>
+                        <td>43</td>
                      </tr>
                   </tbody>
                </table>
@@ -514,7 +495,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
+                 "-4",
                  "-3",
                  "-3",
                  "-3"
@@ -527,7 +508,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-1",
+                 "-2",
                  "0",
                  "0",
                  "0"
@@ -589,9 +570,9 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "2",
+                 "2",
                  "1",
-                 "1",
-                 "1"
+                 "2"
                ]
              },
              {
@@ -612,10 +593,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "48",
-                 "48",
-                 "48",
-                 "41"
+                 "49",
+                 "49",
+                 "50",
+                 "43"
                ]
              }
            ]
@@ -655,7 +636,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 21:05:02 2018</p>
+         Last Run: Mon Nov 19 22:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -684,31 +665,31 @@
                         <td>1</td>
                         <td>6</td>
                         <td>NW</td>
-                        <td>57</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>56</td>
                         <td>1</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>59</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>0</td>
                         <td>-2</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>52</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NW</td>
-                        <td>61</td>
+                        <td>62</td>
                      </tr>
                   </tbody>
                </table>
@@ -807,8 +788,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "3",
-                 "3",
-                 "3"
+                 "2",
+                 "2"
                ]
              },
              {
@@ -828,9 +809,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "57",
-                 "59",
-                 "61"
+                 "58",
+                 "60",
+                 "62"
                ]
              }
            ]
