--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 01:05:06 2018</p>
+         Last Run: Tue Nov 20 02:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -58,7 +58,7 @@
                         <td>3</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>58</td>
+                        <td>59</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
@@ -173,7 +173,7 @@
                "data":[
                  "55",
                  "57",
-                 "58"
+                 "59"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 01:05:06 2018</p>
+         Last Run: Tue Nov 20 02:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -249,35 +249,35 @@
                         <td>-2</td>
                         <td>-5</td>
                         <td>4</td>
-                        <td>63</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>89</td>
+                        <td>90</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
-                        <td>0</td>
-                        <td>-3</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>4</td>
-                        <td>57</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>85</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>8</td>
-                        <td>54</td>
+                        <td>4</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>N</td>
-                        <td>80</td>
+                        <td>NNW</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -289,7 +289,7 @@
                         <td>0</td>
                         <td>6</td>
                         <td>ENE</td>
-                        <td>65</td>
+                        <td>64</td>
                      </tr>
                   </tbody>
                </table>
@@ -318,7 +318,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-5",
-                 "-3",
+                 "-4",
                  "-3",
                  "-2"
                ]
@@ -331,7 +331,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-2",
-                 "0",
+                 "-1",
                  "0",
                  "0"
                ]
@@ -393,7 +393,7 @@
                "data":[
                  "4",
                  "4",
-                 "8",
+                 "4",
                  "4"
                ]
              },
@@ -403,9 +403,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "63",
-                 "57",
-                 "54",
+                 "64",
+                 "58",
+                 "55",
                  "56"
                ]
              },
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "89",
-                 "85",
-                 "80",
-                 "65"
+                 "90",
+                 "84",
+                 "79",
+                 "64"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 01:05:06 2018</p>
+         Last Run: Tue Nov 20 02:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -482,12 +482,12 @@
                         <td>Partly Cloudy</td>
                         <td>-1</td>
                         <td>-3</td>
-                        <td>12</td>
+                        <td>11</td>
                         <td>61</td>
                         <td>1</td>
                         <td>6</td>
                         <td>W</td>
-                        <td>57</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -498,20 +498,20 @@
                         <td>55</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>WNW</td>
-                        <td>59</td>
+                        <td>W</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-1</td>
                         <td>3</td>
-                        <td>53</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>NW</td>
-                        <td>61</td>
+                        <td>WNW</td>
+                        <td>44</td>
                      </tr>
                   </tbody>
                </table>
@@ -609,7 +609,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "12",
+                 "11",
                  "11",
                  "3"
                ]
@@ -622,7 +622,7 @@
                "data":[
                  "61",
                  "55",
-                 "53"
+                 "52"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "57",
-                 "59",
-                 "61"
+                 "44",
+                 "44",
+                 "44"
                ]
              }
            ]
